Summary of important user-visible changes for statistics 1.2.0:
-------------------------------------------------------------------

 ** The following functions are new:

      regress_gp  dendogram   plsregress

 ** New functions for the generalized extreme value (GEV) distribution:
      
      gevcdf gevfit gevfit_lmom gevinv gevlike gevpdf gevrnd gevstat
      
 ** The interface of the following functions has been modified:

      mvnrnd

 ** `kmeans' has been fixed to deal with clusters that contain only
    one element.

 ** `normplot' has been fixed to avoid use of functions that have been
    removed from Octave core. Also, the plot produced should now display some
    aesthetic elements and appropriate legends.

 ** The help text of `mvtrnd' has been improved.

 ** Package is no longer autoloaded.

Summary of important user-visible changes for statistics 1.1.3:
-------------------------------------------------------------------

 ** The following functions are new in 1.1.3:

      copularnd mvtrnd

 ** The functions mnpdf and mnrnd are now also usable for greater numbers
    of categories for which the rows do not exactly sum to 1.

Summary of important user-visible changes for statistics 1.1.2:
-------------------------------------------------------------------

 ** The following functions are new in 1.1.2:

      mnpdf mnrnd

 ** The package is now dependent on the io package (version 1.0.18 or
    later) since the functions that it depended of from miscellaneous
    package have been moved to io.

 ** The function `kmeans' now accepts the 'emptyaction' property with
    the 'singleton' value. This allows for the kmeans algorithm to handle
    empty cluster better. It also throws an error if the user does not
    request an empty cluster handling, and there is an empty cluster.
    Plus, the returned items are now a closer match to Matlab.

Summary of important user-visible changes for statistics 1.1.1: